# Chimera-project

./: .coderabbit.yaml  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  SECURITY.md  pyproject.toml
.cursor/: mcp.json
.cursor/rules/: agents.md  git-github.mdc  mcp-governance.mdc  project-chimera.mdc
.github/workflows/: main.yml
.specify/scripts/bash/: check-golden-env.sh
docs/adr/: 001-database-choice.md  002-mcp-architecture.md  004-spec-driven-development.md  005-security-posture.md  README.md
ide-chat-history/: cursor_golden_environment_setup_explana.md
research/: tooling_strategy.md
scripts/: postgres-docker.sh
skills/: README.md  __init__.py
skills/skill_download_youtube/: README.md  __init__.py  download.py
skills/skill_fetch_trends/: README.md  __init__.py  fetch.py
skills/skill_transcribe_audio/: README.md  __init__.py  transcribe.py
specs/: _meta.md  acceptance_criteria.md  api_endpoints.md  functional.md  mcp_servers.md  openclaw_integration.md  openclaw_protocol.md  rule_intent.md  technical.md
tests/: test_skills_interface.py  test_trend_fetcher.py
