[project]
name = "chimera"
version = "0.1.0"
description = "Chimera – Python + PostgreSQL application (10 Academy)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.1,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "python-dotenv>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
