[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "chimera"
version = "0.1.0"
description = "Chimera – Python + PostgreSQL application (10 Academy)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["skills*"]
exclude = ["specs*", "research*", "tests*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "python-dotenv>=1.0.0",
    "ruff>=0.4.0",
    "bandit[toml]>=1.7.0",
    "pre-commit>=3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "python-dotenv>=1.0.0",
    "ruff>=0.4.0",
    "bandit[toml]>=1.7.0",
    "pre-commit>=3.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["skills", "tests"]
exclude = ["specs", "research", ".specify"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]  # assert_used in tests
